# wordle_python

./: .gitignore  .pre-commit-config.yaml  .pypirc  First_script.py  LICENSE  Makefile  README.md  dev-requirements.in  dev-requirements.txt  main.py  pyproject.toml  tox.ini
src/: checker.py  game.py  validator.py  word.py  wordle.py
tests/: test_checker.py  test_game.py  test_validator.py  test_word.py
wordle_python/: __init__.py  __main__.py  checker.py  draw.py  validator.py  word.py  word_list.txt  wordle.py
