[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wordle_python"
authors = [
   {name = "Juan Carlos Aranda Huecas", email = "juanki0396@gmail.com"},
   {name = "Alvaro Novillo Correas", email = "alvanovi@ucm.es"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
keywords = ["wordle", "python"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/Juanki0396/wordle_python"

[project.optional-dependencies]
dev = [
	'tox >= 3.25.1',
	'pre-commit >= 2.17.0',
	'pip-tools>=6.8.0',
	'isort >= 5.10.1',
	'black >= 22.6',
	'flit >= 0.6',
]
test = [
	'pytest >= 7.1.0',
	'flake8 >= 4.0.1',
	'flake8-docstrings >= 1.6.0',
 	'mypy >= 0.971',
]

[tool.isort]
profile = "black"
